# Book_HomeWork

./: README.md  pyproject.toml
src/: db.sqlite3
src/book/: admin.py  apps.py  models.py  serializers.py  views.py
src/core/: router.py  settings.py  urls.py
